@@ -1,6 +1,9 @@
 ChangeLog
 ==========
 
+
+- merge changes e.g. samtools for duplicate marking and other small changes
+
 release 4.0
 - following the deletion of the code that related to the merge cache from
   the pipeline in https://github.com/wtsi-npg/npg_seq_pipeline/pull/820,
